[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Guns/Grappling_gun.gd" type="Script" id=1]
[ext_resource path="res://Assets/batmans_grapple_gun/Grapple_gun.tres" type="ArrayMesh" id=2]

[sub_resource type="SphereShape" id=16]
radius = 3.24868

[sub_resource type="BoxShape" id=17]
extents = Vector3( 6.68637, 6.64651, 6.74803 )

[node name="Grappling_gun" type="Spatial"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, -0.14, 0 )
script = ExtResource( 1 )

[node name="Hook" type="MeshInstance" parent="."]
transform = Transform( -0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 0, -0.702251, 0.983702 )
layers = 2
mesh = ExtResource( 2 )
material/0 = null

[node name="Rope_position" type="Position3D" parent="Hook"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.75915e-06, 7.05432, 20.1223 )

[node name="StaticBody3" type="StaticBody" parent="Hook/Rope_position"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Hook/Rope_position/StaticBody3"]
shape = SubResource( 16 )

[node name="Grapple_timer" type="Timer" parent="."]
wait_time = 18.0
one_shot = true

[node name="Grapple_point" type="Position3D" parent="."]
transform = Transform( 0.1, 0, -7.40149e-16, 0, 0.1, 0, 7.40149e-16, 0, 0.1, 9.4739e-14, 0, -10 )

[node name="StaticBody" type="StaticBody" parent="Grapple_point"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Grapple_point/StaticBody"]
shape = SubResource( 17 )

[connection signal="timeout" from="Grapple_timer" to="." method="_on_Grapple_timer_timeout"]
